[gd_scene load_steps=11 format=2]

[ext_resource path="res://Prefabs/Floors/Basic/BasicFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WorldBuilder(SetPieces).gd" type="Script" id=3]
[ext_resource path="res://Scenes/Helpers and Managers/EraserArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/UI/GameUI/GameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Floors.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Builders And Factories/ItemsFactory.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Background/catchmeifyoucan.ogg" type="AudioStream" id=13]
[ext_resource path="res://Scenes/Builders And Factories/BlockFactory.gd" type="Script" id=14]
[ext_resource path="res://Prefabs/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=15]

[node name="Level" type="Node2D"]

[node name="Floors" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="GrassFloor" parent="Floors" instance=ExtResource( 1 )]

[node name="GrassFloor8" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -175, 0 )

[node name="GrassFloor9" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -350, 0 )

[node name="GrassFloor10" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -525, 0 )

[node name="GrassFloor11" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -700, 0 )

[node name="GrassFloor12" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -825, 0 )

[node name="GrassFloor13" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -1000, 0 )

[node name="GrassFloor14" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -1175, 0 )

[node name="GrassFloor15" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( -1350, 0 )

[node name="GrassFloor2" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 175, 0 )

[node name="GrassFloor3" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 350, 0 )

[node name="GrassFloor4" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 525, 0 )

[node name="GrassFloor5" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 700, 0 )

[node name="GrassFloor6" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 875, 0 )

[node name="GrassFloor7" parent="Floors" instance=ExtResource( 1 )]
position = Vector2( 1050, 0 )

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource( 2 )]
position = Vector2( 179, -131 )
SPEED = 325

[node name="WorldBuilder" type="Node2D" parent="." groups=["Difficulty", "World_Level", "World_Type"]]
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="WorldBuilder"]
position = Vector2( 612, -2382.5 )
scale = Vector2( 52.6, 246.95 )

[node name="Factories" type="Node2D" parent="WorldBuilder"]

[node name="ItemsFactory" type="Node2D" parent="WorldBuilder/Factories"]
script = ExtResource( 9 )

[node name="BlocksFactory" type="Node2D" parent="WorldBuilder/Factories" groups=["Difficulty", "World_Level", "World_Type"]]
script = ExtResource( 14 )

[node name="TerrainEraser" type="Node2D" parent="."]
position = Vector2( -1232, 53 )

[node name="EraserArea" parent="TerrainEraser" instance=ExtResource( 4 )]
position = Vector2( -788, -6 )

[node name="UI" type="Node2D" parent="."]

[node name="Control" parent="UI" instance=ExtResource( 5 )]

[node name="Items" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="PauseUI" parent="." instance=ExtResource( 15 )]

[connection signal="screen_entered" from="WorldBuilder/VisibilityNotifier2D" to="WorldBuilder" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="WorldBuilder/VisibilityNotifier2D" to="WorldBuilder" method="_on_VisibilityNotifier2D_screen_exited"]
